Wrong assert check for transfor mfeedback #58949

Closed
opened 2018-12-07 16:10:20 +01:00 by Sergey Sharybin · 5 comments

System Information

Operating system: Debian Buster, 64bit
Graphics card: GTX 1080, 390.87

Blender Version

Broken: 9f5a27c5be
Worked: fe20aa1edf

Short description of error

Assert failure when adding hair on default cube.

Exact steps for others to reproduce the error

With the default cube selected, go to particles, create new particle system and change type to HAIR.

The assert will be hit, since transform feedback is only passing geometry and vertex shaders, but no fragment one.

Here is a backtrace P864: (An Untitled Masterwork)

(gdb) bt
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#1  0x00007ffff656f2f1 in __GI_abort () at abort.c:79
#2  0x000055555aec0da3 in GPU_shader_create_ex (
    vertexcode=0x624000718108 "/**\n * Library to create hairs dynamically from control points.\n * This is less bandwidth intensive than fetching the vertex attributes\n * but does more ALU work per vertex. This also reduce the numbe"..., fragcode=0x0, geocode=0x0, libcode=0x0, defines=0x55556a55cd00 "#define HAIR_PHASE_SUBDIV\n", tf_type=GPU_SHADER_TFB_POINTS, 
    tf_names=0x7fffffffc4e0, tf_count=1, shname=0x55556a53afa0 <__func__.42617> "DRW_shader_create_with_transform_feedback")
    at /home/sergey/src/blender/blender/source/blender/gpu/intern/gpu_shader.c:361
#3  0x000055555af75bbb in DRW_shader_create_with_transform_feedback (
    vert=0x624000718108 "/**\n * Library to create hairs dynamically from control points.\n * This is less bandwidth intensive than fetching the vertex attributes\n * but does more ALU work per vertex. This also reduce the numbe"..., geom=0x0, defines=0x55556a55cd00 "#define HAIR_PHASE_SUBDIV\n", prim_type=GPU_SHADER_TFB_POINTS, varying_names=0x7fffffffc4e0, varying_count=1)
    at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager_shader.c:298
#4  0x000055555b0acde8 in hair_refine_shader_get (sh=PART_REFINE_CATMULL_ROM) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:76
#5  0x000055555b0add93 in drw_shgroup_create_hair_procedural_ex (object=0x61b000008c88, psys=0x617000037988, md=0x60e000041508, hair_pass=0x62100011fc58, gpu_mat=0x0, 
    gpu_shader=0x60b00004a2e8) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:176
#6  0x000055555b0ae015 in DRW_shgroup_hair_create (object=0x61b000008c88, psys=0x617000037988, md=0x60e000041508, hair_pass=0x62100011fc58, shader=0x60b00004a2e8)
    at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:193
#7  0x000055555afff6bd in EEVEE_hair_cache_populate (vedata=0x6160002d3388, sldata=0x617000033e08, ob=0x61b000008c88, cast_shadow=0x7fffffffc7f0)
    at /home/sergey/src/blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1666
#8  0x000055555afc3e92 in EEVEE_cache_populate (vedata=0x6160002d3388, ob=0x61b000008c88) at /home/sergey/src/blender/blender/source/blender/draw/engines/eevee/eevee_engine.c:136
#9  0x000055555af54e15 in drw_engines_cache_populate (ob=0x61b000008c88) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1017
#10 0x000055555af5712e in DRW_draw_render_loop_ex (depsgraph=0x6110001290c8, engine_type=0x55556e1ec000 <DRW_engine_viewport_eevee_type>, ar=0x6140000ae648, v3d=0x61a00000b488, 
    viewport=0x60d0003bac18, evil_C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1479
#11 0x000055555af568ab in DRW_draw_view (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1405
#12 0x00005555592c93c4 in view3d_draw_view (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1319
#13 0x00005555592c94bc in view3d_main_region_draw (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1340
#14 0x0000555559ec66dc in ED_region_do_draw (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/screen/area.c:529
#15 0x0000555558fb22b6 in wm_draw_window_offscreen (C=0x60c000000588, win=0x61300003c808, stereo=false) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:580
#16 0x0000555558fb2dd9 in wm_draw_window (C=0x60c000000588, win=0x61300003c808) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:712
#17 0x0000555558fb381f in wm_draw_update (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:866
#18 0x0000555558faba2f in WM_main (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:433
#19 0x0000555558fa1191 in main (argc=1, argv=0x7fffffffd548) at /home/sergey/src/blender/blender/source/creator/creator.c:521

**System Information** Operating system: Debian Buster, 64bit Graphics card: GTX 1080, 390.87 **Blender Version** Broken: 9f5a27c5be Worked: fe20aa1edf **Short description of error** Assert failure when adding hair on default cube. **Exact steps for others to reproduce the error** With the default cube selected, go to particles, create new particle system and change type to HAIR. The assert will be hit, since transform feedback is only passing geometry and vertex shaders, but no fragment one. Here is a backtrace [P864: (An Untitled Masterwork)](https://archive.blender.org/developer/P864.txt) ``` (gdb) bt #0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 #1 0x00007ffff656f2f1 in __GI_abort () at abort.c:79 #2 0x000055555aec0da3 in GPU_shader_create_ex ( vertexcode=0x624000718108 "/**\n * Library to create hairs dynamically from control points.\n * This is less bandwidth intensive than fetching the vertex attributes\n * but does more ALU work per vertex. This also reduce the numbe"..., fragcode=0x0, geocode=0x0, libcode=0x0, defines=0x55556a55cd00 "#define HAIR_PHASE_SUBDIV\n", tf_type=GPU_SHADER_TFB_POINTS, tf_names=0x7fffffffc4e0, tf_count=1, shname=0x55556a53afa0 <__func__.42617> "DRW_shader_create_with_transform_feedback") at /home/sergey/src/blender/blender/source/blender/gpu/intern/gpu_shader.c:361 #3 0x000055555af75bbb in DRW_shader_create_with_transform_feedback ( vert=0x624000718108 "/**\n * Library to create hairs dynamically from control points.\n * This is less bandwidth intensive than fetching the vertex attributes\n * but does more ALU work per vertex. This also reduce the numbe"..., geom=0x0, defines=0x55556a55cd00 "#define HAIR_PHASE_SUBDIV\n", prim_type=GPU_SHADER_TFB_POINTS, varying_names=0x7fffffffc4e0, varying_count=1) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager_shader.c:298 #4 0x000055555b0acde8 in hair_refine_shader_get (sh=PART_REFINE_CATMULL_ROM) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:76 #5 0x000055555b0add93 in drw_shgroup_create_hair_procedural_ex (object=0x61b000008c88, psys=0x617000037988, md=0x60e000041508, hair_pass=0x62100011fc58, gpu_mat=0x0, gpu_shader=0x60b00004a2e8) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:176 #6 0x000055555b0ae015 in DRW_shgroup_hair_create (object=0x61b000008c88, psys=0x617000037988, md=0x60e000041508, hair_pass=0x62100011fc58, shader=0x60b00004a2e8) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_hair.c:193 #7 0x000055555afff6bd in EEVEE_hair_cache_populate (vedata=0x6160002d3388, sldata=0x617000033e08, ob=0x61b000008c88, cast_shadow=0x7fffffffc7f0) at /home/sergey/src/blender/blender/source/blender/draw/engines/eevee/eevee_materials.c:1666 #8 0x000055555afc3e92 in EEVEE_cache_populate (vedata=0x6160002d3388, ob=0x61b000008c88) at /home/sergey/src/blender/blender/source/blender/draw/engines/eevee/eevee_engine.c:136 #9 0x000055555af54e15 in drw_engines_cache_populate (ob=0x61b000008c88) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1017 #10 0x000055555af5712e in DRW_draw_render_loop_ex (depsgraph=0x6110001290c8, engine_type=0x55556e1ec000 <DRW_engine_viewport_eevee_type>, ar=0x6140000ae648, v3d=0x61a00000b488, viewport=0x60d0003bac18, evil_C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1479 #11 0x000055555af568ab in DRW_draw_view (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1405 #12 0x00005555592c93c4 in view3d_draw_view (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1319 #13 0x00005555592c94bc in view3d_main_region_draw (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1340 #14 0x0000555559ec66dc in ED_region_do_draw (C=0x60c000000588, ar=0x6140000ae648) at /home/sergey/src/blender/blender/source/blender/editors/screen/area.c:529 #15 0x0000555558fb22b6 in wm_draw_window_offscreen (C=0x60c000000588, win=0x61300003c808, stereo=false) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:580 #16 0x0000555558fb2dd9 in wm_draw_window (C=0x60c000000588, win=0x61300003c808) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:712 #17 0x0000555558fb381f in wm_draw_update (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:866 #18 0x0000555558faba2f in WM_main (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:433 #19 0x0000555558fa1191 in main (argc=1, argv=0x7fffffffd548) at /home/sergey/src/blender/blender/source/creator/creator.c:521 ```
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Clément Foucault was assigned by Sergey Sharybin 2018-12-07 16:11:11 +01:00
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

Goes to my favorite comrade with my favorite priority in this case :)

@fclem, we miss you online ;)

Goes to my favorite comrade with my favorite priority in this case :) @fclem, we miss you online ;)

This issue was referenced by 0fe5a78983

This issue was referenced by 0fe5a789837394d54c1a7570ef1e46c8ab3b0830

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58949
No description provided.