Fix T58949: Transform feedback shaders not having fragment shader